--- a/lib/design-system/src/index.scss
+++ b/lib/design-system/src/index.scss
@@ -1,3 +1,6 @@
+@import './../lib/variable';
+@import './../lib/common';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
