[#0000] - [Sunny] adding dropdown component layout

--- a/lib/design-system/lib/_variable.scss
+++ b/lib/design-system/lib/_variable.scss
@@ -1,3 +1,9 @@
 // Color Variables 
 $grey : #a89a9a;
 $blue: #2440e2;
+$white: #ffffff;
+$light-grey: #8080801a;
+
+
+// element z-index range
+$form-element-index: 1000
