--- a/lib/design-system/src/index.scss
+++ b/lib/design-system/src/index.scss
@@ -14,3 +14,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.components {
+
+  &__dropdown {
+    width: 200px;
+  }
+}
