--- a/lib/design-system/src/components/dropdown/dropdown-list/DropDownList.scss
+++ b/lib/design-system/src/components/dropdown/dropdown-list/DropDownList.scss
@@ -20,6 +20,10 @@
                 opacity : .5;
                 pointer-events: none;
             }
+
+            &[data-selected] {
+                background-color: $gold;
+            }
         }
     }
 }
